2001-01-29  Assar Westerlund  <assar@sics.se>

	* m4sh.m4 (_AS_TEST_PREPARE): Discard output when testing `test
	-x' and `test -f' to avoid confusing users with error messages.
	(AS_MKDIR_P): Invert order of separators in IFS to avoid problem
	with some shells adding backslash between fields and parsing the
	result for escapes.
	* doc/autoconf.texi (Special Shell Variables): Document IFS.

2001-01-29  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_PROG_F77): Improve documentation of the compilers
	that are tried, add a few new ones (cft77, af77, epcf90, xlf95, g95),
	and put pgf90 in the right place (before the F95 compilers).

2001-01-29  Jim Meyering  <meyering@lucent.com>

	* autoscan.pl: Do scan `configure.ac' when you claim it.
	From Raja R Harinath.
	(@kinds): Use `qw', rather than lots of quotes and commas.
	(%generic_macro): Use single quotes around literals.
	($configure_scan): Define global, and use it instead of the literal.
	Use `warn' in place of `printf STDERR'.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: `Formatting++' changes: prototypes all the
	functions, no longer use `&' to call functions as it disables
	prototype checking, topological sort so that functions are defined
	before being used, and put an Autoconf like nice comment to
	describe the functions.
	(output): Accept an CONFIGURE_SCAN parameters, and open CONF.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_SITE_LOAD): Let config.log know what you load.

2001-01-27  Akim Demaille  <akim@epita.fr>

	Follow Tim Van Holder's suggestions for a uniform handling of
	symlinks.

	* m4sh.m4: Stay in `as_', not `ac_'.
	(_AS_LN_S_PREPARE): Eve out from...
	* acspecific.m4 (AC_PROG_LN_S): here.  Adjust.
	* m4sh.m4 (AS_LN_S): New.
	(AS_SHELL_PREPARE): Call _AS_LN_S_PREPARE.

2001-01-26  Assar Westerlund  <assar@sics.se>

	* autoreconf.sh (find): Fix precedence.
	(aclocal): Same as below for autoheader.

2001-01-26  Akim Demaille  <akim@epita.fr>
